lastupd_hope so..

--- a/Areas/Admin/Views/Default/Index.cshtml
+++ b/Areas/Admin/Views/Default/Index.cshtml
@@ -4,5 +4,9 @@
     Layout = "~/Areas/Admin/Views/Shared/_AdminLayout.cshtml";
 }
 
-<h2>Index</h2>
+<h2>Chọn trang cân đi đến:</h2>
+<hr />
+<h4>Nếu muốn thêm hoặc cập nhập thêm danh mục cho sản phẩm: <a href="~/Admin/Categories/Index">DANH MỤC</a> </h4>
+<h4>Nếu muốn thêm hoặc cập nhập sản phẩm: <a href="~/Admin/Products/Index">SẢN PHẨM</a> </h4>
+
 
