--- a/Views/Cart/Index.cshtml
+++ b/Views/Cart/Index.cshtml
@@ -66,7 +66,7 @@
                             </div>
                         </div>
 
-                        <a href="@Url.Action("RemoveFromCart", "Cart", new { id = item.ProductID })" class="remove-btn">Xóa</a>
+                        <a href="@Url.Action("RemoveFromCart", "Cart", new { id = item.ProductID })" class="remove-btn"><i class="fa-solid fa-trash"></i></a>
                     </div>
                 }
             </div>
