--- a/Views/Order/OrderHistory.cshtml
+++ b/Views/Order/OrderHistory.cshtml
@@ -55,7 +55,7 @@
                         {
                             <tr>
                                 <td>@order.OrderID</td>
-                                <td>@order.OrderDate.ToString("dd/MM/yyyy HH:mm")</td>
+                                <td>@order.OrderDate.ToString("dd/MM/yyyy")</td>
                                 <td>@order.ShippingAddress</td>
                                 <td>@order.TotalAmount.ToString("N0") VNĐ</td>
                                 <td>@order.PaymentStatus</td>
