--- a/Views/Account/Register.cshtml
+++ b/Views/Account/Register.cshtml
@@ -145,7 +145,7 @@
                     <tr>
                         <td colspan="2">
                             <label>Giới tính</label><br>
-                            <label>@Html.RadioButtonFor(m => m.CustomerGender, "Nam") Nam</label>
+                            <label style="margin-left:15px">@Html.RadioButtonFor(m => m.CustomerGender, "Nam") Nam</label>
                             <label style="margin-left:15px">@Html.RadioButtonFor(m => m.CustomerGender, "Nu") Nữ</label>
                             <label style="margin-left:15px">@Html.RadioButtonFor(m => m.CustomerGender, "Khac") Khác</label>
                         </td>
